[package]
name = "hello"
version = "0.1.0"
authors = ["Jason Clark <jason@jjasonclark.com>"]
edition = "2018"
publish = false
description = "Hello world in Rust"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/jjasonclark/helloworld"
repository = "https://github.com/jjasonclark/helloworld"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.18"
ansi_term = "0.12"
clap-log-flag = "0.2"
clap-verbosity-flag = "0.2"
exitfailure = "0.5"
failure = "0.1"
log = "0.4"
