[package]
name = "rust-web"
version = "0.1.0"
authors = ["Jason Clark <jason@jjasonclark.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.2"
tokio = { version = "^0.2", features = ["full"] }
log = "^0.4"
env_logger = "^0.7"
