[package]
name = "rust-web"
version = "0.1.0"
authors = ["Jason Clark <jason@jjasonclark.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
config = { version = "^0.10", features = ["json"] }
env_logger = "^0.7"
log = "^0.4"
serde_json = "^1.0"
serde = "^1.0"
tokio = { version = "^0.2", features = ["full"] }
warp = "^0.2"
